--- a/index.html
+++ b/index.html
@@ -365,7 +365,14 @@
         </footer>
 
     </div><!-- end wrapper -->
-<?php include 'include/footer.html';?>
+<!-- jQuery Files -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/carousel.js"></script>
+    <script src="js/animate.js"></script>
+    <script src="js/custom.js"></script>
+    <!-- VIDEO BG PLUGINS -->
+    <script src="js/videobg.js"></script>
 <script>
     let anchorSelector = 'a[href^="#"]'; 
         let anchorList =  
