--- a/index.html
+++ b/index.html
@@ -173,6 +173,28 @@
             </div>
         </section>
 
+        <section class="gallery" style="margin-top: 4%">
+            <div class="container">
+                <h2 class="text-center" style="margin:1% auto 5%;">Founders <mark>Story</mark> </h2>
+
+                <div class="row">
+                    <div class="col-md-5 founder">
+                        <img src="images/testimonial/jai.jpg" alt="" class="founder_img">
+                        <h3>G Jai M.Sc.,</h3>
+                        <p style="color: #01bacf;margin-top: -12px;">Founder</p>
+                    </div>
+                    <div class="col-md-7 founder_story">
+                        <p>I am glad that Success Academy, founded in the year of 2018, is fullfilling my dream of providing a best coaching center of learning for the aspirants from all over Tamil Nadu.</p>
+                        <p>Success Academy providing coaching for TNPSC, TNUSRB (SI and Constable),RRB,TET,TNFUSRC and SSC. </p>
+                        <p>Success Academy, One of the best institutions in Tamil Nadu coaching and mentoring hundreds of aspirants.</p>
+                        <p>It has evolved  over the years to the extent of successfully helping 100+ candidates realise their dream of becoming a gazetted officers. Also Ww offer an opportunity to aspirants from various socio-economic backgrounds to achieve their dream</p>
+                        <p> We take pride in having successfully contributed to nation building albeit, in a small way.</p>
+                        
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <section class="section gb nopadtop">
             <div class="container">
@@ -247,7 +269,7 @@
         <section class="section">
             <div class="container">
                 <div class="section-title text-center">
-                    <h3>Testimonials</h3>
+                    <!-- <h3>Testimonials</h3> -->
                     <p>Students says about us</p>
                 </div>
 
