--- a/about-us.html
+++ b/about-us.html
@@ -126,7 +126,7 @@
                     <div class="col-md-5 founder">
                         <img src="images/testimonial/jai.jpg" alt="" class="founder_img">
                         <h3>G Jai M.Sc.,</h3>
-                        <p style="color: #01bacf;margin-top: -12px;">Founder</p>
+                        <p style="color: #01bacf;margin-top: -12px;margin-bottom: 8%;">Founder</p>
                     </div>
                     <div class="col-md-7 founder_story">
                         <p>I am glad that Success Academy, founded in the year of 2018, is fullfilling my dream of providing a best coaching center of learning for the aspirants from all over Tamil Nadu.</p>
