--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     </div>
                     <div class="col-md-8">
                         <div class="custom-module p40l">
-                            <h2>Why <mark>Success Academy?</mark> </h2>
+                            <h2>Why Success Academy? </h2>
                             <p>The most reliable and best coaching institute for all competitive exams. Our aim is to develop students a competitive attitude along with sound academic base with quality teaching and individual attention to handle competitive exams.</p>
 
                             <hr class="invis">
@@ -175,7 +175,7 @@
 
         <section class="gallery" style="margin-top: 4%">
             <div class="container">
-                <h2 class="text-center" style="margin:1% auto 5%;">Founders <mark>Story</mark> </h2>
+                <h2 class="text-center" style="margin:1% auto 5%;">Founder's Story </h2>
 
                 <div class="row">
                     <div class="col-md-5 founder">
@@ -187,8 +187,8 @@
                         <p>I am glad that Success Academy, founded in the year of 2018, is fullfilling my dream of providing a best coaching center of learning for the aspirants from all over Tamil Nadu.</p>
                         <p>Success Academy providing coaching for TNPSC, TNUSRB (SI and Constable),RRB,TET,TNFUSRC and SSC. </p>
                         <p>Success Academy, One of the best institutions in Tamil Nadu coaching and mentoring hundreds of aspirants.</p>
-                        <p>It has evolved  over the years to the extent of successfully helping 100+ candidates realise their dream of becoming a gazetted officers. Also Ww offer an opportunity to aspirants from various socio-economic backgrounds to achieve their dream</p>
-                        <p> We take pride in having successfully contributed to nation building albeit, in a small way.</p>
+                        <p>It has evolved  over the years to the extent of successfully helping 100+ candidates realise their dream of becoming a gazetted officers. Also we offer an opportunity to aspirants from various socio-economic backgrounds to achieve their dream</p>
+                        <p>We take pride in having successfully contributed to nation building albeit, in a small way.</p>
                         
                         
                     </div>
