--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                     <div class="col-md-7 founder_story">
                         <p>I am glad that Success Academy, founded in the year of 2018, is fullfilling my dream of providing a best coaching center of learning for the aspirants from all over Tamil Nadu.</p>
                         <p>Success Academy providing coaching for TNPSC, TNUSRB (SI and Constable),RRB,TET,TNFUSRC and SSC. </p>
-                        <p>Success Academy, One of the best institutions in Tamil Nadu coaching and mentoring hundreds of aspirants.</p>
-                        <p>It has evolved  over the years to the extent of successfully helping 100+ candidates realise their dream of becoming a gazetted officers. Also we offer an opportunity to aspirants from various socio-economic backgrounds to achieve their dream</p>
+                        <p>Success Academy, One of the best institutions in TamilNadu which provides best coaching and mentoring hundreds of aspirants.</p>
+                        <p>It has evolved  over the years to the extent of successfully helping 100+ candidates realise their dream of becoming a gazetted officers. Also we offer an opportunity to aspirants from various socio-economic backgrounds to achieve their dream.</p>
                         <p>We take pride in having successfully contributed to nation building albeit, in a small way.</p>
                         
                         
