--- a/gallery.html
+++ b/gallery.html
@@ -130,31 +130,31 @@
                 <!-- <h2>Written Test</h2> -->
                 <div class="row" style="margin-top: 3%;">
                     <div class="col-md-4">
-                        <img src="images/gallery/o1.JPG" class="gallery_pic">
+                        <img src="images/gallery/1.JPG" class="gallery_pic">
                     </div>
                     <div class="col-md-4">
-                        <img src="images/gallery/o2.JPG" class="gallery_pic">
+                        <img src="images/gallery/2.JPG" class="gallery_pic">
                     </div>
                     <div class="col-md-4">
-                        <img src="images/gallery/o3.jpg" class="gallery_pic">
+                        <img src="images/gallery/3.jpg" class="gallery_pic">
                     </div>
                     <div class="col-md-4">
-                        <img src="images/gallery/o4.jpg" class="gallery_pic">
+                        <img src="images/gallery/4.jpg" class="gallery_pic">
                     </div>
                     <div class="col-md-4">
-                        <img src="images/gallery/o5.JPG" class="gallery_pic">
+                        <img src="images/gallery/5.JPG" class="gallery_pic">
                     </div>
                     <div class="col-md-4">
-                        <img src="images/gallery/o6.JPG" class="gallery_pic">
+                        <img src="images/gallery/6.JPG" class="gallery_pic">
                     </div>
                     <div class="col-md-4">
                         <img src="images/gallery/o7.JPG" class="gallery_pic">
                     </div>
                     <div class="col-md-4">
-                        <img src="images/gallery/o8.jpg" class="gallery_pic">
+                        <img src="images/gallery/8.jpg" class="gallery_pic">
                     </div>
                     <div class="col-md-4">
-                        <img src="images/gallery/o9.jpg" class="gallery_pic">
+                        <img src="images/gallery/9.jpg" class="gallery_pic">
                     </div>
                     <!-- <div class="col-md-4">
                         <img src="images/gallery/10.JPG" class="gallery_pic">
