--- a/tnfusrc.html
+++ b/tnfusrc.html
@@ -188,7 +188,7 @@ The Twelfth Five Year Plan for the State of Tamil Nadu encompasses preservation 
                     </div>
                     <div class="col-lg-2 col-md-2">
                         <div class="widget clearfix">
-                            <h3 class="widget-title">Cources</h3>
+                            <h3 class="widget-title">Courses</h3>
                             <div class="list-widget">   
                                 <ul>
                                     <li><a href="tnpsc.html">TNPSC</a></li>
