--- a/tnpsc.html
+++ b/tnpsc.html
@@ -341,7 +341,7 @@
                     </div>
                     <div class="col-lg-2 col-md-2">
                         <div class="widget clearfix">
-                            <h3 class="widget-title">Cources</h3>
+                            <h3 class="widget-title">Courses</h3>
                             <div class="list-widget">   
                                 <ul>
                                     <li><a href="tnpsc.html">TNPSC</a></li>
