--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
     <div class="modal-content">
       
       <div class="modal-body">
-            <img src="images/news.jpg alt="in news">    
+            <img src="images/news.jpeg alt="in news">    
       </div>
       
     </div>
