--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             } 
         }); 
         $(document).ready(function(){
-           $('#myModal').modal('show')
+           $('#exampleModal').modal('show')
         });
 </script>
 </body>
