--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
     <div class="modal-content">
       
       <div class="modal-body">
-            <img src="images/news.jpeg" alt="in news" style="width: 100%">    
+            <img src="images/news.jpeg" alt="in news" style="width: 200px">    
       </div>
       
     </div>
