--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
     <link rel="stylesheet" href="css/carousel.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="style.css">
+    <style>
+        .modal-open .modal {
+        overflow-x: hidden;
+        overflow-y: hidden;
+        top: 1%;
+    }
+        .modal-open .modal img{
+            width: 80%;
+            height: auto;
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H7D03ELTBL"></script>
 <script>
@@ -401,7 +411,7 @@
     <div class="modal-content">
       
       <div class="modal-body">
-            <img src="images/news.jpeg" alt="in news" style="width: 200px">    
+            <img src="images/news.jpeg" alt="in news">    
       </div>
       
     </div>
