--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         .modal-open .modal img{
             width: 80%;
             height: auto;
-
+        }
+    </style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-H7D03ELTBL"></script>
 <script>
