--- a/contact-us.html
+++ b/contact-us.html
@@ -147,9 +147,19 @@
                                 <div class="col-md">
                                     <div class="small-box">
                                         <i class="flaticon-map-with-position-marker wow fadeIn"></i>
-                                        <h4>Visit Our Office</h4>
+                                        <h4>Head Office Address</h4>
                                         <small>Nagapadi, Polur main road,</small>
                                         <small>Tiruvannamalai, Tamilnadu.</small>
+                                    </div>
+                                </div>
+                                <div class="col-md">
+                                    <div class="small-box">
+                                        <i class="flaticon-map-with-position-marker wow fadeIn"></i>
+                                        <h4>Branch Office Address</h4>
+                                        <small>Thalvakulam, Rajandhangal Village,</small>
+                                        <small>Vettavalam main road, 606 755</small>
+                                        <small>Tiruvannamalai, Tamilnadu.</small>
+                                        <h4><a href="https://maps.app.goo.gl/45M8FSdnkimjnsS26" target="_blank">Google Map</a></h4>
                                     </div>
                                 </div>
 
